# translata

./: Cargo.toml  README.md
src/: main.rs
src/google/: mod.rs
src/translator/: mod.rs
